# s2u08

./: CMakeLists.txt  main.cpp
Clicker/: clicker.cpp  clicker.h  clicker.ui
Greeter/: greeter.cpp  greeter.h  greeter.ui
Selector/: selector.cpp  selector.h  selector.ui
